--- a/app/views/pages/status.html.erb
+++ b/app/views/pages/status.html.erb
@@ -8,6 +8,11 @@
       </div>
     </div>
   </form>
-
   <%= link_to 'Please Leave a Review',  new_booking_review_path(@booking) %>
+
+<div class="alert alert-info alert-dismissible fade show m-1" role="alert" padding: 20px;>
+  "Drive confidently with the right instructor by your side"
+</div>
+
+
 </div>
