--- a/app/assets/stylesheets/pages/_status.scss
+++ b/app/assets/stylesheets/pages/_status.scss
@@ -14,6 +14,7 @@ $iphone-12-pro-height: 844px;
   align-items: center;
   justify-content: center;
   text-align: center;
+  // padding-bottom: 90px;
 
   .card {
     background-color: rgba(255, 165, 0, 0.5) !important;
@@ -80,9 +81,11 @@ $iphone-12-pro-height: 844px;
       color: #0056b3;
     }
   }
+
+  // .alert {
+  //       // position: fixed;
+  //       bottom: 16px;
+  //       right: 16px;
+  //       z-index: 1000;
+  //   }
 }
-
-
-// h1 {
-//   margin-top: 0;
-// }
