--- a/app/views/instructors/show.html.erb
+++ b/app/views/instructors/show.html.erb
@@ -16,8 +16,11 @@
 <% else %>
   <% @reviews.each do |review| %>
     <p><%= review.booking.user.first_name %></p>
-      <%# <%= cl_image_tag review.booking.user.profile_picture.key, height: 100, width: 100, crop: :thumb %> 
+      <%# <%= cl_image_tag review.booking.user.profile_picture.key, height: 100, width: 100, crop: :thumb %>
     <p><%= review.description %></p>
     <p><%= review.rating %></p>
   <% end %>
 <% end %>
+
+<% content_for :meta_title, "#{@instructor.company_name} is on #{DEFAULT_META["meta_product_name"]}" %>
+<% content_for :meta_image, cl_image_path(@instructor.photo.key) if @instructor.photo.attached? %>
