--- a/app/views/instructors/show.html.erb
+++ b/app/views/instructors/show.html.erb
@@ -1,31 +1,43 @@
 <div class="container-instructor-show">
   <div class="hero-instructor">
-    <p class="back-link"><%= link_to "Back", instructors_path, class: "" %></p>
+    <p class="back-link">
+      <%= link_to instructors_path, class: "button-back-color" do %>
+        <i class="fa-solid fa-arrow-left fa-lg" style="color: #ffffff;"></i>
+      <% end %>
+    </p>
   </div>
   <div class="center">
     <%= cl_image_tag @instructor.photo.key, height: 150, width: 150, crop: :fill, class: 'rounded-circle' %>
     <h1><%= @instructor.company_name %></h1>
-    <p><strong>Car Type:</strong> <%= @instructor.car_type.join(', ') %></p>
-    <h3>Contact Details:</h3>
-    <p><strong>Work Phone Number:</strong> <%= @instructor.work_phone_number %></p>
-    <h3>Location:</h3>
-    <p><strong>Region:</strong> <%= @instructor.address %></p>
-    <div style="width: 85%; height: 250px;"
+      <%# <div class="car_type_block"> %>
+      <div class="w-100">
+        <h3 class="left-align">Can Teach:</h3>
+        <% @instructor.car_type.each do |car_type| %>
+          <p> <%= car_type %> </p>
+        <% end %>
+        <h3 class="left-align">Contact Details:</h3>
+        <p><%= @instructor.work_phone_number %></p>
+        <h3 class="left-align">Location:</h3>
+        <p><%= @instructor.address %></p>
+     </div>
+    <div style="width: 100%; height: 250px; border-radius:5px"
       data-controller="map"
       data-map-markers-value="<%= @markers.to_json %>"
       data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
     </div>
     <p><%= link_to "Book Now", new_instructor_booking_path(@instructor.id), class: "btn btn-primary" %></p>
-    <h3>Reviews:</h3>
-    <% if @reviews.nil? %>
-      <p>No reviews yet</p>
-    <% else %>
-      <% @reviews.each do |review| %>
-        <div class="review-block">
-          <p><%= review.rating %></p>
-          <p><%= review.description %></p>
-        </div>
+    <div class="w-100">
+      <h3 class="left-align">Reviews:</h3>
+      <% if @reviews.nil? %>
+        <p>No reviews yet</p>
+      <% else %>
+        <% @reviews.each do |review| %>
+          <div class="review-block">
+            <p><%= review.rating %></p>
+            <p><%= review.description %></p>
+          </div>
+        <% end %>
       <% end %>
-    <% end %>
+    </div>
   </div>
 </div>
