--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,3 +11,4 @@
 @import "components/index";
 @import "pages/index";
 @import "flatpickr/dist/flatpickr.css";
+@import "star-rating.js/dist/star-rating.css";
