--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -7,6 +7,6 @@
 
     <%= f.input :rating, collection: 1..5, as: :radio_buttons %>
 
-    <%= f.submit "Create Review" %>
+    <%= f.submit class: "btn btn-primary" "Create Review" %>
   <% end %>
 </div>
