--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -6,5 +6,5 @@
 <p>Time: <%= @booking.time %></p>
 <p>Instructor: <%= @booking.booked_user.email %></p>
 
-<%= link_to "Edit", edit_booking_path(@booking) %> |
+<%= link_to "Editt", edit_booking_path(@booking) %> |
 <%= link_to "Delete", booking_path(@booking), method: :delete, data: { confirm: "Are you sure you want to delete this booking?" } %>
