--- a/app/views/instructors/index.html.erb
+++ b/app/views/instructors/index.html.erb
@@ -19,7 +19,7 @@
     <div class="row justify-content-center">
       <div class="col-sm-8 mt-4">
         <div class="no-results-message">
-          <p>Sorry, no instructors are available in this region.</p>
+          <p>Sorry, no instructors are available in this region..</p>
         </div>
       </div>
     </div>
