--- a/app/views/instructors/index.html.erb
+++ b/app/views/instructors/index.html.erb
@@ -33,7 +33,7 @@
                 <%= cl_image_tag instructor.photo.key, height: 150, width: 150, crop: :fill, class: 'card-img-top instructor-image' %>
               <% end %>
               <div class="card-body">
-                <h5 class="card-title text-center"><%= instructor.company_name %></h5>
+                <h5 class="card-title text-center test"><%= instructor.company_name %></h5>
               </div>
             </div>
           </a>
