--- a/app/views/pages/status.html.erb
+++ b/app/views/pages/status.html.erb
@@ -10,7 +10,7 @@
   </form>
   <%= link_to 'Please Leave a Review',  new_booking_review_path(@booking) %>
 
-<div class="alert alert-info alert-dismissible fade show m-1" role="alert" padding: 20px;>
+<div class="msg">
   "Drive confidently with the right instructor by your side"
 </div>
 
