--- a/app/assets/stylesheets/pages/_all_bookings.scss
+++ b/app/assets/stylesheets/pages/_all_bookings.scss
@@ -7,4 +7,17 @@
   transition-duration: 0.4s;
 }
 
+.button-instructors {
+  border: none;
+  background-color:#007bff;
+  color: #ffffff;
+  padding:10px 24px;
+  text-decoration: none;
+  border-radius: 40px;
+  position: absolute;
+  top: 80%;
+  left: 50%;
+  transform: translate(-50%, -80%);
+  font-size: 20px;
 
+}
