--- a/app/views/instructors/index.html.erb
+++ b/app/views/instructors/index.html.erb
@@ -30,7 +30,7 @@
           <a href="<%= instructor_path(instructor) %>">
             <div class="card instructor-card" style="background-image: url('https://res.cloudinary.com/dujnrrugq/image/upload/v1686654090/instructor_card_big_lnynfz.png')">
               <% if instructor.photo.attached? %>
-                <%= cl_image_tag instructor.photo.key, height: 150, width: 150, crop: :fill, class: 'card-img-top instructor-image' %>
+                <%= cl_image_tag instructor.photo.key, class: 'card-img-top instructor-image' %>
               <% else %>
                 <%= image_tag 'user.svg', class: "avatar-large" %>
               <% end %>
