edit button etc

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,6 +1,6 @@
-<div class="container col-10 container-form", style="background-color:#56CCF2">
+<div class=" col-10 container-form", style="background-color:#56CCF2">
   <h1 class="text-center py-4", style="color:#FFFFFF">New Booking</h1>
-    <div class="container">
+
       <%= simple_form_for([@instructor, @booking], data: { controller: 'flatpickr' })  do |f| %>
         <div class="row mb-4 text-center justify-content-center">
           <div class="col-10 border-radius", style="background-color:#FFEEB1">
@@ -23,5 +23,5 @@
       </div>
       </div>
       <% end %>
-    </div>
+
 </div>
