--- a/app/assets/stylesheets/pages/_all_bookings.scss
+++ b/app/assets/stylesheets/pages/_all_bookings.scss
@@ -35,3 +35,17 @@
   left: 80%;
   transform: translate(-80%, -80%);
 }
+
+.bin-position {
+  position: absolute;
+  top: 55%;
+  left: 80%;
+  transform: translate(-80%, -55%);
+}
+
+.pen-position {
+  position: absolute;
+  top: 75%;
+  left: 80%;
+  transform: translate(-80%, -75%);
+}
