--- a/app/views/pages/checkout.html.erb
+++ b/app/views/pages/checkout.html.erb
@@ -1,14 +1,27 @@
-<div class="container mx auto" style = "background-color: rgba(255, 255, 255, 0.8); position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%)">
+<div class="container mx auto">
   <div class="checkout-banner">
     <div class="text-overlay">
       Checkout
     </div>
     <form class="row g-3">
       <div class="tarif">
+
+    <div class="dropdown">
+      <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
+        Tarif
+      </button>
+      <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
+        <li><a class="dropdown-item active" href="#">Each 30m - RS500</a></li>
+        <li><a class="dropdown-item" href="#">Each 1H - RS1000</a></li>
+        <li><a class="dropdown-item" href="#">Each 2H - RS2000</a></li>
+        <li><hr class="dropdown-divider"></li>
+        <%# <li><a class="dropdown-item" href="#">Separated link</a></li> %>
+      </ul>
+    <%# </div>
         <p>Each 30m - RS500</p>
         <p>Each 1H - RS1000</p>
         <p>Each 2H - RS2000</p>
-      </div>
+      </div> %>
 
       <div class="payment-container ">
       </div>
