--- a/app/assets/stylesheets/pages/_checkout.scss
+++ b/app/assets/stylesheets/pages/_checkout.scss
@@ -5,11 +5,11 @@
 }
 
 .checkout-banner {
-  background-color: #E67E22;
+  background-color: #e8e0d9;
   border-radius: 10px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  // padding: 4px;
-  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.7)), url(https://res.cloudinary.com/df6aeru2i/image/upload/v1686309679/robo_ubfkjc.jpg);
+  padding: 4px;
+  // background-image: linear-gradient(to right, rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.7)), url(https://res.cloudinary.com/df6aeru2i/image/upload/v1686309679/robo_ubfkjc.jpg);
   background-size: 400px 450px;
   background-repeat: no-repeat;
 }
@@ -18,7 +18,7 @@
   font-size: 30px;
   font-weight: bold;
   margin-bottom: 10px;
-  color: white;
+  color: rgb(6, 6, 6);
   text-align: center;
   padding:5px;
 }
@@ -29,13 +29,13 @@
   padding-right: 10px;
   // padding: 15px;
   width: 100%;
-  color: rgb(247, 243, 243);
+  color: rgb(234, 99, 31);
 }
 
 .tarif p {
   // margin: 8px;
   padding: 4px;
-  color: white;
+  color: rgb(252, 252, 252);
   text-align: right;
   display: block;
 }
@@ -55,7 +55,7 @@
 }
 
 .btn {
-  display: inline-block;
+  // display: inline-block;
   padding: 8px 16px;
   background-color: #007bff;
   color: #fff;
@@ -140,5 +140,6 @@
   .tarif.p input[type="radio"]:checked + label:after {
     transform: translateY(-50%) scale(1);
   }
+
 
 }
