--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,7 @@
 <div class="container--home">
-  <img src="https://res.cloudinary.com/dblraorbo/image/upload/v1686255430/Drive%20Guru/drive_guru_logo.svg" alt="Drive Guru Logo" class="logo">
+  <div class="background-overlay"></div>
+  <img src="https://res.cloudinary.com/dblraorbo/image/upload/v1686888413/Drive%20Guru/drive_guru_logo_heading.svg" alt="Drive Guru Logo" class="logo">
+  <img src="https://res.cloudinary.com/dblraorbo/image/upload/v1686888540/Drive%20Guru/drive_guru_logo_orange_cone.svg" alt="Drive Guru Logo" class="logo-cone">
   <% if current_user %>
     <h1>Hi <span><%= current_user.first_name %></span>, your Drive Guru awaits!</h1>
   <% else %>
