--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -14,30 +14,31 @@
         <p><%= link_to "Instructors", instructors_path, class: "button-instructors" %></p>
       </div>
     </div>
-
 <% else %>
   <div class="col-11 container-form", style="background-color:#56CCF2">
     <h1 class="text-center py-4", style="color:#FFFFFF; font-size:30px;"><strong>All Bookings</strong></h1>
               <% @bookings.each do |booking| %>
-                <div class="row mb-2 justify-content-center">
-                  <div class="col-10 border-radius shadow-bookings pt-2", style="background-color:#FFFFFF">
+                <div class="row mb-4 justify-content-center">
+                  <div class="col-7 border-radius shadow-bookings pt-2", style="background-color:#FFFFFF">
                     <p style="color:#313131">
-                      <strong>Date :</strong>     <%= booking.date %> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp <i class="fa-solid fa-pen" style="color: #000000;"></i>
+                      <strong>Date :</strong>     <%= booking.date %>
                       <br>
                       <strong>Time :</strong>     <%= booking.time %>
                       <br>
-                      <strong>Car Type :</strong>  <%= booking.car_type.join("") %> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp   <i class="fa-solid fa-trash" style="color: #000000;"></i>
+                      <strong>Car Type :</strong>  <%= booking.car_type.join("") %>
                     </p>
                   </div>
-                </div>
-                <div class="row mb-4 justify-content-center">
-                  <div class="d-flex justify-content-center" >
+                  <div class="col-2 flex-column d-flex align-items-center ">
+                    <div class="mt-2">
                       <%= link_to booking_path(booking), data: { turbo_method: :delete, confirm: "Are you sure?" } do %>
-                      <div class="bin-position"><i class="fa-solid fa-trash" style="color: #000000;"></i></div>
-                      <% end %>
+                        <i class="fa-solid fa-trash" style="color: #000000;"></i>
+                        <% end %>
+                    </div>
+                    <div class="mt-4">
                       <%= link_to  edit_booking_path(booking[:id]), { turbo_method: :edit, confirm: "Are you sure?" }  do %>
-                      <div class="pen-position"><i class="fa-solid fa-pen" style="color: #000000;"></i></div>
-                      <% end %>
+                        <i class="fa-solid fa-pen" style="color: #000000;"></i>
+                        <% end %>
+                    </div>
                   </div>
                 </div>
               <% end %>
@@ -45,4 +46,3 @@
 <% end %>
 
 <p><%= link_to "Instructors", instructors_path, class: "button-instructors" %></p>
-<%# <%= link_to "Edit", edit_booking_path(@booking), class: "button-edit" %>
