--- a/app/assets/stylesheets/pages/_all_bookings.scss
+++ b/app/assets/stylesheets/pages/_all_bookings.scss
@@ -24,28 +24,7 @@
   font-size: 20px;
 }
 
-.button-edit {
-  border: none;
-  background-color:#FFEEB1;
-  color: #313131;
-  padding:6px 14px;
-  text-decoration: none;
-  position: absolute;
-  top: 80%;
-  left: 80%;
-  transform: translate(-80%, -80%);
-}
-
-.bin-position {
-  position: absolute;
-  top: 55%;
-  left: 80%;
-  transform: translate(-80%, -55%);
-}
-
-.pen-position {
-  position: absolute;
-  top: 75%;
-  left: 80%;
-  transform: translate(-80%, -75%);
+.button-container {
+  text-align: center;
+  margin-top: 100px;
 }
