--- a/app/views/instructors/show.html.erb
+++ b/app/views/instructors/show.html.erb
@@ -1,24 +1,14 @@
 <div class="container-instructor-show">
   <div class="center">
-
     <div class="hero-instructor">
       <p class="back-link">
         <%= link_to instructors_path, class: "button-back-color" do %>
           <i class="fa-solid fa-arrow-left fa-lg" style="color: #ffffff;"></i>
           <h1><%= @instructor.company_name %></h1>
-
-    <%= cl_image_tag @instructor.photo.key, class: 'rounded-circle'%>
-    <h1><%= @instructor.company_name %></h1>
-      <%# <div class="car_type_block"> %>
-      <div class="w-100">
-        <h3 class="left-align">Can Teach:</h3>
-        <% @instructor.car_type.each do |car_type| %>
-          <p> <%= car_type %> </p>
-
         <% end %>
       </p>
     </div>
-    <%# <%= cl_image_tag @instructor.photo.key, height: 150, width: 150, crop: :fill, class: 'rounded-circle' %>
+    <%= cl_image_tag @instructor.photo.key, height: 150, width: 150, crop: :fill, class: 'rounded-circle'%>
       <%# <div class="car_type_block"> %>
     <div style="width: 100%; height: 400px; border-radius:5px"
       data-controller="map"
@@ -33,12 +23,9 @@
         <% @reviews.each do |review| %>
           <div class="review-block">
             <p><%= review.booking.user.first_name %></p>
-            <script>
-              let rating = <%= review.rating %>;
-              for (let i = 0; i < rating; i++) {
-                document.write("⭐️");
-              }
-            </script>   
+            <p>
+              <%= review.rating %>
+            </p>
             <p><%= review.description %></p>
           </div>
         <% end %>
