--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,49 +1,51 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="form-container--edit">
+  <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= f.error_notification %>
+  <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+    <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :first_name, required: true, autofocus: true, input_html: { autocomplete: "first_name" } %>
-    <%= f.input :last_name, required: true, autofocus: true, input_html: { autocomplete: "last_name" } %>
-    <%= f.input :phone_number, required: true, autofocus: true, input_html: { autocomplete: "phone_number" } %>
-    <%= f.input :email, required: true, autofocus: true, input_html: { autocomplete: "email" } %>
-    <%= f.input :photo, as: :file %>
+    <div class="form-inputs">
+      <%= f.input :first_name, required: true, autofocus: true, input_html: { autocomplete: "first_name" } %>
+      <%= f.input :last_name, required: true, autofocus: true, input_html: { autocomplete: "last_name" } %>
+      <%= f.input :phone_number, required: true, autofocus: true, input_html: { autocomplete: "phone_number" } %>
+      <%= f.input :email, required: true, autofocus: true, input_html: { autocomplete: "email" } %>
+      <%= f.input :photo, as: :file %>
 
-    <%# <% if resource.instructor? %>
-      <%# <%= f.input :address, required: true, autofocus: true, input_html: { autocomplete: "address" } %>
-    <%# <% end %>
+      <%# <% if resource.instructor? %>
+        <%# <%= f.input :address, required: true, autofocus: true, input_html: { autocomplete: "address" } %>
+      <%# <% end %>
 
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+        <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+      <% end %>
+
+      <%= f.input :password,
+                  hint: "leave it blank if you don't want to change it",
+                  required: false,
+                  input_html: { autocomplete: "new-password" } %>
+      <%= f.input :password_confirmation,
+                  required: false,
+                  input_html: { autocomplete: "new-password" } %>
+      <%= f.input :current_password,
+                  hint: "we need your current password to confirm your changes",
+                  required: true,
+                  input_html: { autocomplete: "current-password" } %>
+    </div>
+
+    <% if current_user.instructor.present? %>
+      <%= link_to "Edit Instructor Profile", edit_instructor_path(current_user.instructor) %>
+    <% else %>
+      <%= link_to "Become an Instructor", new_instructor_path %>
     <% end %>
 
-    <%= f.input :password,
-                hint: "leave it blank if you don't want to change it",
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :current_password,
-                hint: "we need your current password to confirm your changes",
-                required: true,
-                input_html: { autocomplete: "current-password" } %>
-  </div>
-
-  <% if current_user.instructor.present? %>
-    <%= link_to "Edit Instructor Profile", edit_instructor_path(current_user.instructor) %>
-  <% else %>
-    <%= link_to "Become an Instructor", new_instructor_path %>
+    <div class="form-actions">
+      <%= f.button :submit, "Update" %>
+    </div>
   <% end %>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Update" %>
-  </div>
-<% end %>
+  <h3>Cancel my account</h3>
 
-<h3>Cancel my account</h3>
+  <div>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
 
-<div>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
-
-<%= link_to "Back", :back %>
+  <%= link_to "Back", :back %>
+</div>
