--- a/app/views/instructors/show.html.erb
+++ b/app/views/instructors/show.html.erb
@@ -8,7 +8,7 @@
         <% end %>
       </p>
     </div>
-    <%= cl_image_tag @instructor.photo.key, height: 150, width: 150, crop: :fill, class: 'rounded-circle'%>
+    <%# <%= cl_image_tag @instructor.photo.key, height: 150, width: 150, crop: :fill, class: 'rounded-circle'%>
       <%# <div class="car_type_block"> %>
     <div style="width: 100%; height: 400px; border-radius:5px"
       data-controller="map"
