--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container w-50 shadow p-5 rounded" style="background-color: rgba(255, 255, 255, 0.8);">
+<div class="container shadow p-5 rounded" style="background-color: rgba(255, 255, 255, 0.8);">
   <h2>Sign up</h2>
 
   <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), data: { turbo: :false }) do |f| %>
