--- a/app/assets/stylesheets/pages/_all_bookings.scss
+++ b/app/assets/stylesheets/pages/_all_bookings.scss
@@ -17,8 +17,8 @@
   padding:10px 24px;
   text-decoration: none;
   border-radius: 40px;
-  position: absolute;
-  top: 80%;
+  position: fixed;
+  top: 85vh;
   left: 50%;
   transform: translate(-50%, -80%);
   font-size: 20px;
