--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,6 +1,7 @@
-<% if Booking.count < 1 %>
-  <div class="col-11 container-form", style="background-color:#56CCF2">
-    <h1 class="text-center py-4", style="color:#FFFFFF; font-size:30px;"><strong>All Bookings</strong></h1>
+<div style="position:relative; padding:16px; margin-bottom:32px;">
+  <% if Booking.count < 1 %>
+    <div class="col-11 container-form", style="background-color:#56CCF2">
+      <h1 class="text-center py-4", style="color:#FFFFFF; font-size:30px;"><strong>All Bookings</strong></h1>
       <div class="row justify-content-center">
         <div class="col-sm-8 mt-4" style="height:200px;">
           <div class="no-results-message pb-0 mx-4", style="text-align:center">
@@ -8,40 +9,37 @@
           </div>
         </div>
       </div>
-  </div>
-   <div class="row mb-4 justify-content-center">
+    </div>
+    <div class="row mb-4 justify-content-center">
       <div class="d-flex justify-content-center" >
         <p><%= link_to "Instructors", instructors_path, class: "button-instructors" %></p>
       </div>
     </div>
-<% else %>
-  <div class="col-11 container-form", style="background-color:#56CCF2">
-    <h1 class="text-center py-4", style="color:#FFFFFF; font-size:30px;"><strong>All Bookings</strong></h1>
-              <% @bookings.each do |booking| %>
-                <div class="row mb-4 justify-content-center">
-                  <div class="col-7 border-radius shadow-bookings pt-2", style="background-color:#FFFFFF">
-                    <p style="color:#313131">
-                      <strong>Date :</strong>     <%= booking.date %>
-                      <br>
-                      <strong>Time :</strong>     <%= booking.time %>
-                      <br>
-                      <strong>Car Type :</strong>  <%= booking.car_type.join("") %>
-                    </p>
-                  </div>
-                  <div class="col-2 flex-column d-flex align-items-center ">
-                    <div class="mt-2">
-                      <%= link_to booking_path(booking), data: { turbo_method: :delete, confirm: "Are you sure?" } do %>
-                        <i class="fa-solid fa-trash" style="color: #000000;"></i>
-                        <% end %>
+  <% else %>
+    <div class="col-12 container-form", style="background-color:#56CCF2">
+      <h1 class="text-center py-4", style="color:#FFFFFF; font-size:30px;"><strong>All Bookings</strong></h1>
+                <% @bookings.each do |booking| %>
+                  <div class="row mb-4 justify-content-center">
+                    <div class="col-7 border-radius shadow-bookings pt-2", style="background-color:#FFFFFF">
+                      <p style="color:#313131"> <strong>Date :</strong>     <%= booking.date %></p>
+                      <p style="color:#313131"><strong>Time :</strong>     <%= booking.time %></p>
+                      <p style="color:#313131"><strong>Car Type :</strong>  <%= booking.car_type.join("") %></p>
                     </div>
-                    <div class="mt-4">
-                      <%= link_to  edit_booking_path(booking[:id]), { turbo_method: :edit, confirm: "Are you sure?" }  do %>
-                        <i class="fa-solid fa-pen" style="color: #000000;"></i>
-                        <% end %>
+                    <div class="col-2 flex-column d-flex align-items-center ">
+                      <div class="mt-2">
+                        <%= link_to booking_path(booking), data: { turbo_method: :delete, confirm: "Are you sure?" } do %>
+                          <i class="fa-solid fa-trash" style="color: #000000;"></i>
+                          <% end %>
+                      </div>
+                      <div class="mt-4">
+                        <%= link_to  edit_booking_path(booking[:id]), { turbo_method: :edit, confirm: "Are you sure?" }  do %>
+                          <i class="fa-solid fa-pen" style="color: #000000;"></i>
+                          <% end %>
+                      </div>
                     </div>
                   </div>
-                </div>
-              <% end %>
-  </div>
-  <p><%= link_to "Instructors", instructors_path, class: "button-instructors" %></p>
-<% end %>
+                <% end %>
+    </div>
+    <p><%= link_to "Instructors", instructors_path, class: "button-instructors" %></p>
+  <% end %>
+</div>
