--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -13,8 +13,8 @@
   <%= form.label :time %>
   <%= form.text_field :time %>
 
-  <%= form.label :booked_user_id, "Booked User" %>
-  <%= form.collection_select :booked_user_id, User.all, :id, :email %>
+  <%= form.label :instructor_id, "Instructor" %>
+  <%= form.collection_select :instructor_id, Instructor.all, :id, :email %>
 
   <%= form.submit "Update Booking" %>
 <% end %>
