--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,10 +1,10 @@
 <h1>Booking Details</h1>
 
 <p>Date: <%= @booking.date %></p>
-<p>User: <%= @booking.booker.first_name %> <%= @booking.booker.last_name %></p>
+<p>User: <%= @booking.user.first_name %> <%= @booking.user.last_name %></p>
 <p>Car Transmission: <%= @booking.car_transmission %></p>
 <p>Time: <%= @booking.time %></p>
-<p>Instructor: <%= @booking.booked_user.email %></p>
+<p>Instructor: <%= @booking.com %></p>
 
 <%= link_to "Edit", edit_booking_path(@booking) %> |
 <%= link_to "Delete", booking_path(@booking), method: :delete, data: { confirm: "Are you sure you want to delete this booking?" } %>
