--- a/app/views/instructors/index.html.erb
+++ b/app/views/instructors/index.html.erb
@@ -1,6 +1,7 @@
 
 <div class="container--instructors">
-  <div class="row justify-content-center">
+  <div class=" justify-content-center">
+    <br>
     <div class="col-sm-8">
       <%= form_with url: instructors_path, method: :get, class: "search-form" do %>
         <div class="d-flex">
@@ -14,9 +15,9 @@
       <% end %>
     </div>
   </div>
-
+  <br>
   <% if @instructors.empty? %>
-    <div class="row justify-content-center">
+    <div class="justify-content-center">
       <div class="col-sm-8">
         <div class="no-results-message">
           <p>Sorry, no instructors are available in this region.</p>
@@ -24,7 +25,7 @@
       </div>
     </div>
   <% else %>
-    <div class="row justify-content-center">
+    <div class="justify-content-center">
       <% @instructors.each do |instructor| %>
         <div class="col-sm-6 col-md-4">
           <a href="<%= instructor_path(instructor) %>">
