there was a syntax error in the reviews/new

--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -8,15 +8,15 @@
   <% else %>
     <%= simple_form_for [@booking, @review] do |f| %>
       <%= f.input :description %>
-    <%= f.input :description %>
 
-    <%# <%= f.input :rating, collection: 1..5, as: :radio_buttons %>
+      <%# <%= f.input :rating, collection: 1..5, as: :radio_buttons %>
 
-    <div class="rating-input">
-      <% (1..5).each do |rating| %>
-        <%= label_tag "rating_#{rating}", nil do %>
-          <%= radio_button_tag 'review[rating]', rating %>
-          <%= content_tag(:span, '', class: 'star', data: { rating: rating }) %>
+      <div class="rating-input">
+        <% (1..5).each do |rating| %>
+          <%= label_tag "rating_#{rating}", nil do %>
+            <%= radio_button_tag 'review[rating]', rating %>
+            <%= content_tag(:span, '', class: 'star', data: { rating: rating }) %>
+          <% end %>
         <% end %>
       </div>
 
