--- a/app/views/instructors/show.html.erb
+++ b/app/views/instructors/show.html.erb
@@ -1,5 +1,8 @@
 <div class="container-instructor-show">
   <div class="hero-instructor">
+    <div style="margin-top:35%;">
+      <%= cl_image_tag @instructor.photo.key, height: 150, width: 150, crop: :fill, class: 'rounded-circle' %>
+    </div>
     <p class="back-link">
       <%= link_to instructors_path, class: "button-back-color" do %>
         <i class="fa-solid fa-arrow-left fa-lg" style="color: #ffffff;"></i>
@@ -7,14 +10,27 @@
     </p>
   </div>
   <div class="center">
-    <%= cl_image_tag @instructor.photo.key, height: 150, width: 150, crop: :fill, class: 'rounded-circle' %>
-    <h1><%= @instructor.company_name %></h1>
       <%# <div class="car_type_block"> %>
-    <div style="width: 100%; height: 400px; border-radius:5px"
+      <div class="w-100">
+
+        <div style="margin-top: 250px;">
+          <h1><%= @instructor.company_name %></h1>
+          <h3 class="left-align">Can Teach:</h3>
+          <% @instructor.car_type.each do |car_type| %>
+            <p> <%= car_type %> </p>
+          <% end %>
+          <h3 class="left-align">Contact Details:</h3>
+          <p><%= @instructor.work_phone_number %></p>
+          <h3 class="left-align">Location:</h3>
+          <p><%= @instructor.address %></p>
+        </div>
+     </div>
+    <div style="width: 100%; height: 250px; border-radius:5px"
       data-controller="map"
       data-map-markers-value="<%= @markers.to_json %>"
       data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
     </div>
+    <p><%= link_to "Book Now", new_instructor_booking_path(@instructor.id), class: "btn btn-primary" %></p>
     <div class="w-100">
       <h3 class="left-align">Reviews:</h3>
       <% if @reviews.nil? %>
@@ -23,14 +39,11 @@
         <% @reviews.each do |review| %>
           <div class="review-block">
             <p><%= review.booking.user.first_name %></p>
-            <p>
-              <%= review.rating %>
-            </p>
+            <p><%= review.rating %></p>
             <p><%= review.description %></p>
           </div>
         <% end %>
       <% end %>
-      <p><%= link_to "Book Now", new_instructor_booking_path(@instructor.id), class: "btn btn-primary", style: "width: 150px; margin: 0 auto;" %></p>
     </div>
   </div>
 </div>
