--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -9,7 +9,7 @@
         </div>
         <div class="row mb-4 text-center justify-content-center">
           <div class="col-10 border-radius", style="background-color:#FFEEB1">
-            <%= f.input :time, collection: ['30 min', '1 h', '2 h'], selected: "", input_html: { class: "center-text-time" } %>
+            <%= f.input :time, collection: ['30min - 500rs', '1 h - 1000rs', '2 h - 1500rs'], selected: "", input_html: { class: "center-text-time" } %>
           </div>
         </div>
         <div class="row mb-4 text-center justify-content-center">
