--- a/app/assets/stylesheets/pages/_instructor_show.scss
+++ b/app/assets/stylesheets/pages/_instructor_show.scss
@@ -66,11 +66,12 @@ body {
   border-radius: 5px;
   padding: 10px;
   margin-bottom: 10px;
-  width: 70%;
+  width: 80%;
   margin-left: auto;
   margin-right: auto;
   overflow: auto;
   max-height: 200px;
+  line-height: 30px;
 }
 
 .d-flex.w-100.justify-content-between {
