--- a/app/views/instructors/index.html.erb
+++ b/app/views/instructors/index.html.erb
@@ -1,6 +1,6 @@
 
 <div class="container--instructors">
-  <div class=" justify-content-center">
+  <div class="justify-content-center">
     <br>
     <div class="col-sm-8">
       <%= form_with url: instructors_path, method: :get, class: "search-form" do %>
@@ -37,6 +37,7 @@
               <% end %>
               <div class="card-body">
                 <h5 class="card-title text-center"><%= instructor.company_name %></h5>
+                <p class="text-title text-center"><%= instructor.address %></p>
               </div>
             </div>
           </a>
